# SmithWatermanOpenCL

./: CMakeLists.txt  SW_kernels.cl  main.cpp  square_kernel.cl
